Replaced lots of words with icons Fixed an issue where default trait value wasn't being saved Added a dialog when importing trait lists and current list hasn't been exported Added location trait Changed trait button shapes Added a button for missing values

--- a/app/src/main/res/layout-sw600dp/trait_audio.xml
+++ b/app/src/main/res/layout-sw600dp/trait_audio.xml
@@ -17,6 +17,8 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
@@ -26,7 +28,9 @@
             android:id="@+id/record"
             android:layout_width="75dp"
             android:layout_height="75dp"
+            android:layout_margin="10dp"
             android:layout_gravity="center"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
