--- a/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
+++ b/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
@@ -24,6 +24,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="0"
@@ -42,6 +45,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="5"
@@ -60,6 +66,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="10"
@@ -78,6 +87,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="15"
@@ -96,6 +108,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="20"
@@ -114,6 +129,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="25"
@@ -132,6 +150,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="30"
@@ -155,6 +176,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="35"
@@ -173,6 +197,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="40"
@@ -191,6 +218,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="45"
@@ -209,6 +239,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="50"
@@ -227,6 +260,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="55"
@@ -245,6 +281,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="60"
@@ -263,6 +302,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="65"
@@ -285,6 +327,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="70"
@@ -303,6 +348,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="75"
@@ -321,6 +369,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="80"
@@ -339,6 +390,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="85"
@@ -357,6 +411,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="90"
@@ -375,6 +432,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="95"
@@ -393,6 +453,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="100"
@@ -414,6 +477,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="130dp"
                 android:text="R"
@@ -431,6 +497,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="130dp"
                 android:text="M"
@@ -448,6 +517,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_button"
                 android:gravity="center"
                 android:minWidth="130dp"
                 android:text="S"
@@ -469,6 +541,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="75dp"
                 android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:background="@drawable/round_button"
                 android:gravity="center"
                 android:minWidth="75dp"
                 android:text="/"
@@ -480,11 +554,13 @@
                 android:id="@+id/clearRustBtn"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:scaleType="fitXY"
-                android:padding="10dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_delete_forever"
-                android:gravity="center" />
+                android:layout_margin="5dp"
+                android:background="@drawable/round_button"
+                android:gravity="center"
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_delete_forever" />
 
         </LinearLayout>
     </LinearLayout>
