--- a/app/src/main/res/layout-sw600dp/trait_multicat.xml
+++ b/app/src/main/res/layout-sw600dp/trait_multicat.xml
@@ -18,6 +18,7 @@
         android:id="@+id/clearMultiCatBtn"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:background="@drawable/round_button"
         android:scaleType="fitXY"
         android:padding="10dp"
         android:layout_gravity="center"
