--- a/app/src/main/res/layout/trait_categorical.xml
+++ b/app/src/main/res/layout/trait_categorical.xml
@@ -19,6 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -30,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -41,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -52,6 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -63,6 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -74,6 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -85,6 +97,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -96,6 +110,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -107,6 +123,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -118,6 +136,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -129,6 +149,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -140,6 +162,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -152,10 +176,12 @@
         android:id="@+id/clearCatBtn"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:scaleType="fitXY"
-        android:padding="10dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_delete_forever"
-        android:gravity="center" />
+        android:layout_margin="5dp"
+        android:background="@drawable/round_button"
+        android:gravity="center"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_delete_forever" />
 
 </LinearLayout>
