--- a/app/src/main/res/layout-sw600dp/nav_header.xml
+++ b/app/src/main/res/layout-sw600dp/nav_header.xml
@@ -6,6 +6,7 @@
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="10dp"
+    android:layout_marginTop="20dp"
     android:theme="@style/ThemeOverlay.AppCompat">
 
     <LinearLayout
@@ -47,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="25dp"
+            android:maxLines="1"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
