--- a/app/src/main/res/layout-sw600dp/trait_boolean.xml
+++ b/app/src/main/res/layout-sw600dp/trait_boolean.xml
@@ -10,6 +10,7 @@
         android:id="@+id/eImg"
         android:layout_width="160dp"
         android:layout_height="160dp"
+        android:padding="10dp"
         android:scaleType="fitXY"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/boolean_true" />
@@ -19,8 +20,9 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:scaleType="fitXY"
+        android:background="@drawable/round_button"
         android:padding="10dp"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:src="@drawable/ic_delete_forever"
         android:gravity="center" />
 
