--- a/app/src/main/res/layout-sw600dp/trait_categorical.xml
+++ b/app/src/main/res/layout-sw600dp/trait_categorical.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -58,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -70,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -82,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -94,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -106,6 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -118,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -130,6 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -142,6 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -154,6 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
             android:textColor="#000000"
@@ -166,10 +178,12 @@
         android:id="@+id/clearCatBtn"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:scaleType="fitXY"
-        android:padding="10dp"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_delete_forever"
-        android:gravity="center" />
+        android:background="@drawable/round_button"
+        android:gravity="center"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_delete_forever" />
 
 </LinearLayout>
