--- a/app/src/main/res/layout-sw600dp/trait_counter.xml
+++ b/app/src/main/res/layout-sw600dp/trait_counter.xml
@@ -36,6 +36,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
             android:paddingTop="10dp">
 
@@ -48,7 +49,9 @@
                 <Button
                     android:id="@+id/minusBtn"
                     android:layout_width="75dp"
+                    android:background="@drawable/round_button"
                     android:layout_height="75dp"
+                    android:layout_margin="5dp"
                     android:gravity="center|center_vertical"
                     android:text="@string/minusday"
                     android:textColor="#000000"
@@ -59,7 +62,9 @@
                     android:id="@+id/clearCounterBtn"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:layout_margin="5dp"
                     android:scaleType="fitXY"
+                    android:background="@drawable/round_button"
                     android:padding="10dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_delete_forever"
@@ -72,8 +77,9 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:gravity="center"
-                android:minWidth="130dp"
+                android:layout_margin="10dp"
                 android:text="@string/plusday"
+                android:background="@drawable/rounded_button"
                 android:layout_marginLeft="15dp"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_size_xxlarge"
