--- a/app/src/main/res/layout-sw600dp/trait_date.xml
+++ b/app/src/main/res/layout-sw600dp/trait_date.xml
@@ -65,11 +65,13 @@
                 <Button
                     android:id="@+id/minusDateBtn"
                     android:layout_width="130dp"
-                    android:layout_height="75dp"
+                    android:layout_height="70dp"
                     android:gravity="center|center_vertical"
                     android:text="@string/minusday"
                     android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/rounded_button"
+                    android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
                 <View
@@ -80,7 +82,9 @@
                     android:id="@+id/enterBtn"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:layout_margin="10dp"
                     android:scaleType="fitXY"
+                    android:background="@drawable/round_button"
                     android:padding="10dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_save"
@@ -93,12 +97,14 @@
                 <Button
                     android:id="@+id/addDateBtn"
                     android:layout_width="130dp"
-                    android:layout_height="75dp"
+                    android:layout_height="70dp"
                     android:gravity="center"
+                    android:layout_margin="10dp"
                     android:minWidth="130dp"
                     android:text="@string/plusday"
+                    android:background="@drawable/rounded_button"
                     android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
+                    android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -113,8 +119,10 @@
                 <ImageButton
                     android:id="@+id/clearDateBtn"
                     android:layout_width="75dp"
+                    android:layout_margin="10dp"
                     android:layout_height="75dp"
                     android:scaleType="fitXY"
+                    android:background="@drawable/round_button"
                     android:padding="10dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_delete_forever"
