--- a/app/src/main/res/layout-sw600dp/trait_location.xml
+++ b/app/src/main/res/layout-sw600dp/trait_location.xml
@@ -17,6 +17,8 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
@@ -27,6 +29,8 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
