--- a/app/src/main/res/layout-sw600dp/trait_numeric.xml
+++ b/app/src/main/res/layout-sw600dp/trait_numeric.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text=";"
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="1"
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="2"
@@ -59,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="3"
@@ -72,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="+"
@@ -85,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="4"
@@ -98,6 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="5"
@@ -111,6 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="6"
@@ -124,6 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="-"
@@ -137,6 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="7"
@@ -150,6 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="8"
@@ -163,6 +174,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="9"
@@ -176,6 +188,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="*"
@@ -189,6 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="."
@@ -202,6 +216,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="120dp"
             android:text="0"
@@ -215,10 +230,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
-            android:minWidth="120dp"
+            android:background="@drawable/rounded_button"
             android:drawableLeft="@drawable/ic_backspace"
-            android:paddingLeft="45dp"
             android:gravity="center"
+            android:minWidth="120dp"
+            android:paddingLeft="45dp"
             android:text=" "
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
