--- a/app/src/main/res/layout-sw600dp/trait_percent.xml
+++ b/app/src/main/res/layout-sw600dp/trait_percent.xml
@@ -25,8 +25,10 @@
         android:id="@+id/clearPercent"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:background="@drawable/round_button"
         android:scaleType="fitXY"
         android:padding="10dp"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_delete_forever"
         android:gravity="center" />
