--- a/app/src/main/res/layout-sw600dp/trait_photo.xml
+++ b/app/src/main/res/layout-sw600dp/trait_photo.xml
@@ -40,7 +40,9 @@
                 android:layout_height="75dp"
                 android:layout_gravity="center"
                 android:gravity="center"
+                android:background="@drawable/round_button"
                 android:padding="10dp"
+                android:layout_margin="10dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_delete_forever" />
 
@@ -49,8 +51,10 @@
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_gravity="center"
+                android:background="@drawable/round_button"
                 android:gravity="center"
                 android:padding="10dp"
+                android:layout_margin="10dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_camera" />
 
