--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,6 +5,7 @@
     android:background="@color/main_primaryDark"
     android:gravity="center_vertical"
     android:orientation="vertical"
+    android:layout_marginTop="20dp"
     android:padding="10dp"
     android:theme="@style/ThemeOverlay.AppCompat">
 
@@ -47,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="25dp"
+            android:maxLines="1"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
