--- a/app/src/main/res/layout/trait_audio.xml
+++ b/app/src/main/res/layout/trait_audio.xml
@@ -17,7 +17,9 @@
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_gravity="center"
+            android:background="@drawable/round_button"
             android:gravity="center"
+            android:layout_margin="10dp"
             android:padding="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_delete_forever" />
@@ -26,7 +28,9 @@
             android:id="@+id/record"
             android:layout_width="65dp"
             android:layout_height="65dp"
+            android:layout_margin="10dp"
             android:layout_gravity="center"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
