--- a/app/src/main/res/layout/trait_multicat.xml
+++ b/app/src/main/res/layout/trait_multicat.xml
@@ -19,6 +19,7 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:scaleType="fitXY"
+        android:background="@drawable/round_button"
         android:padding="10dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_delete_forever"
