--- a/app/src/main/res/layout/trait_numeric.xml
+++ b/app/src/main/res/layout/trait_numeric.xml
@@ -19,6 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text=";"
@@ -31,6 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="1"
@@ -43,6 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="2"
@@ -50,12 +56,13 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/k4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="3"
@@ -68,6 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="+"
@@ -75,12 +84,13 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/k6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="4"
@@ -88,12 +98,13 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/k7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="5"
@@ -106,6 +117,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="6"
@@ -118,6 +131,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="-"
@@ -125,12 +140,13 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/k10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="7"
@@ -143,6 +159,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="8"
@@ -150,12 +168,13 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/k12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="9"
@@ -168,6 +187,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="*"
@@ -180,6 +201,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="."
@@ -192,6 +215,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:gravity="center"
             android:minWidth="85dp"
             android:text="0"
@@ -204,10 +229,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_button"
             android:drawableLeft="@drawable/ic_backspace"
             android:gravity="center"
             android:minWidth="85dp"
-            android:paddingLeft="25dp"
+            android:paddingLeft="29dp"
             android:text=" "
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
