--- a/app/src/main/res/layout/trait_photo.xml
+++ b/app/src/main/res/layout/trait_photo.xml
@@ -39,7 +39,9 @@
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:scaleType="fitXY"
+                android:layout_margin="10dp"
                 android:padding="10dp"
+                android:background="@drawable/round_button"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_delete_forever"
                 android:gravity="center" />
@@ -48,6 +50,8 @@
                 android:id="@+id/capture"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/round_button"
                 android:scaleType="fitXY"
                 android:padding="10dp"
                 android:layout_gravity="center"
